[package]
name = "nickel-todo"
version = "0.1.0"
authors = ["cncgl <concigel@gmail.com>"]

[dependencies]
nickel = "*"
hyper = "0.9.1"
rustc-serialize = "*"
diesel = "0.6.1"
diesel_codegen = { version = "0.6.1", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
