[package]
name = "nickel-todo"
version = "0.1.0"
license = "MIT"
authors = ["cncgl <concigel@gmail.com>"]
repository = "https://github.com/cncgl/nickel-todo"
readme = "README.md"

[dependencies]
nickel = "*"
nickel-diesel = "*"
hyper = "0.9.1"
rustc-serialize = "*"
# diesel = "0.6.1"
# diesel_codegen = { version = "0.6.1", default-features = false, features = ["nightly", "postgres"] }
# dotenv = "0.8.0"
# dotenv_macros = "0.8.0"
